# stats-practice

./: Correlation.ipynb  Data-height-weight.txt  Permutations-and-Combinations.ipynb  README.md  pyproject.toml
