[tool.poetry]
name = "stats-practice"
version = "0.1.0"
description = ""
authors = ["Violet Vivirand <purpleslovemail@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
jupyter = "^1.0.0"
jupyterlab = "^3.1.1"
numpy = "^1.21.1"
pandas = "^1.3.1"
statsmodels = "^0.12.2"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
plotly = "^5.1.0"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
